--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div id="loginContainer">
-    <button id="btnBack" onclick="window.location.href='https://sikaztas.blogspot.com/p/k2.html'">
+    <button id="btnBack" onclick="window.location.href='https://infokampus2alfalah.blogspot.com/'">
       Kembali
     </button>
     <h2>Login Admin</h2>
@@ -75,4 +75,5 @@
     }
   </script>
 </body>
+
 </html>
